# WorldOfElectron

./: .gitignore  CMakeLists.txt  CMakePresets.json  profilerResult.out  vcpkg.json
client/: CMakeLists.txt
client/resources/configuration/: defaultConfiguration.json
client/resources/texture/: background.pyxel
client/src/: main.cpp
commun/: CMakeLists.txt
commun/src/: test.cpp  woe_commun.hpp
include/: woe.hpp  woe_entity.hpp  woe_event.hpp  woe_network.hpp  woe_world.hpp
resources/configuration/: texture_loader.json
resources/texture/: frame.pyxel  frameDark.pyxel  title_background.pyxel
resources/texture/Illustration/: BackgroundIdea.pyxel
resources/texture/UI/: Frame_Cyan.pyxel  Frame_DarkCyan.pyxel  Frame_DarkGray.pyxel  Frame_Gray.pyxel  Frame_LightCyan.pyxel  Frame_LightGray.pyxel
server/: CMakeLists.txt
server/src/: main.cpp  woe_server.hpp
shader/: chunkShader.lum  chunkShader.out
src/: main.cpp  woe.hpp  woe_texture_manager.cpp  woe_texture_manager.hpp  woe_widget_redefinition.hpp
src/miscellaneous/: event_notifier.hpp  texture_atlas.cpp  texture_atlas.hpp  translator.cpp  widget_redefinition.hpp  woe_texture_atlas.cpp  woe_texture_atlas.hpp  woe_texture_manager.cpp  woe_translator.cpp  woe_translator.hpp  woe_widget_redefinition.hpp
src/widget/: main_widget.cpp  main_widget.hpp
src/widget/main_menu/: main_menu_panel.cpp  main_menu_panel.hpp  selector_widget.cpp
src/widget/panel/: host_game_panel.cpp  host_game_panel.hpp  join_game_panel.cpp  join_game_panel.hpp  main_menu_panel.cpp  main_menu_panel.hpp
src/widget/widget/: value_selector.hpp
